infra/gitops/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hongjot-dev-deployment
  namespace: hongjot-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: summer-workshop-hongjot
          image: ghcr.io/secretlabrat/hongjot:6e5657f2b0cbadf6e82d5e2cbf8f094ad8c95255
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
                cpu: "0.25"
                memory: 128Mi
